# scandir

./: README.md  ScanDir.hs  project.sh  scandir.cabal
scripts/: pghc  pghci  project.sh  scan-sets  vim-ghc.sh  with
